--- a/style.css
+++ b/style.css
@@ -1,31 +1,77 @@
-[id = top] {
-	width: 100%;
-	font-size: 14px; 
+[id = container]{
+	border: 5px solid lightgrey;
+	width: 700px;
+	margin: auto;
+}
+[id = bottom]{
+	display: flex;
+}
+[id = top] { 
 	color: white;
 	text-align: center;
-	background-color: darkblue;
-	height: 100%;
-}
-[id = bottom] {
-	color: blue;
-
+	padding: 1px;
+	background: linear-gradient(to left, #3d4f5b, #6d6d6d);
 }
 [id = leftSide] {
-	width: 30%;
-	font-size: 14px;
+	width: 210px;
 	color:white;
-	background:grey;
+	background: linear-gradient(to right, #444444, #6d6d6d);
 }
 body {
 	font-family: Arial;
 }
 body img {
-text-align: center;
-width: 100px;
-height: 100px;
-border: 3px solid lightgrey;
-border-radius: 30px;
+	border: 2px solid lightgrey;
+	border-radius: 50px;
+	margin-left: 40px;
+	margin-top: 25px;
+	width: 120px;
+	height: 120px;
+}
+[id = name]{
+	width: 180px;
+	margin-left: 14px;
+	border-bottom: 2px solid #ffff00;
+	font-size: 200%;
+	padding-bottom: 10px;
+}
+[id = caption] {
+	text-align: center;
+	text-decoration: underline;
+	font-size: 130%;
+}
+[id = first]{
+	background-color: #ffa500;
+	width: 140px;
+	border-radius:20px;
+	text-align: center;
+	margin-left: 14px;
+}
+[id = second]{
+	background-color: #0174df;
+	width: 120px;
+	border-radius:20px;
+	text-align: center;
+	margin-left: 14px;
+}
+[id = third]{
+	background-color: #008000;
+	width: 170px;
+	border-radius:20px;
+	text-align: center;
+	margin-left: 14px;
+}
+[id = rightSide]{
+	color:blue;
+	background:white;
+	margin-left: 14px;
 }
 [id = line]{
-	text-decoration: underline;
+	border-bottom: 2px solid blue;
+	padding-bottom: 10px;
+	width: 450px; 
 }
+[id = linkColor]{
+	color: royalblue;
+}
+
